--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   dio: ^3.0.0
+  flutter_swiper: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +80,8 @@ flutter:
     - family: MyIcon
       fonts:
         - asset: fonts/navbar.ttf
-    - family: MyIcon2
+    - family: home_page
       fonts:
-        - asset: fonts/logo.ttf
+        - asset: fonts/iconfont.ttf
+  assets:
+    - assets/images/dragon.png
