home_page done.(expect searchbar)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,3 +106,5 @@ flutter:
     - assets/images/nav/icon_short_video_sel.png
     - assets/images/nav/icon_shouye.png
     - assets/images/nav/icon_shouye_sel.png
+    - assets/images/home/banner_look.png
+    - assets/images/home/box_banner.png
