--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   dio: ^3.0.0
   flutter_swiper: ^1.1.6
   flutter_easyrefresh: ^2.1.5
+  provider: ^4.3.2
 
 dev_dependencies:
   flutter_test:
