--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
     <!--点播播放器悬浮窗权限-->
 
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <!-- <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> -->
 
     <!--存储-->
 
@@ -63,5 +63,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+      
     </application>
 </manifest>
