--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,8 @@ dependencies:
   provider: ^4.3.2
   flutter_screenutil: ^2.3.1
   intl: ^0.16.1
-  flutter_tencentplayer: ^0.10.0
-  screen: 0.0.5
-  flutter_forbidshot: 0.0.2
+  chewie: ^0.9.10
+  video_player: ^0.10.12+3
 
 dev_dependencies:
   flutter_test:
