--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   intl: ^0.16.1
   chewie: ^0.9.10
   video_player: ^0.10.12+3
+  cached_network_image: ^2.3.2+1
+  fluro: ^1.6.3
 
 dev_dependencies:
   flutter_test:
