完成了详情页的推荐视频数据和UI，但是没有解决屏幕适配

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,8 @@ flutter:
       fonts:
         - asset: assets/fonts/iconfont.ttf
   assets:
+    - assets/images/detail/icon_cnxh.png
+    - assets/images/detail/icon_like_dz.png
     - assets/images/detail/icon_xz.png
     - assets/images/detail/icon_fx.png
     - assets/images/detail/icon_sc_1.png
